--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -10,4 +10,6 @@ const { translations } = Astro.props;
 
 <Shell translations={translations}>
   <Sprite name="arrow" />
+  <h1>Welcome!!!!</h1>
+  <code>Juhui</code>
 </Shell>
