--- a/src/layouts/Shell.astro
+++ b/src/layouts/Shell.astro
@@ -1,6 +1,6 @@
 ---
-import "@fontsource-variable/nunito";
-import "@fontsource-variable/montserrat";
+import "@fontsource/pt-sans";
+import "@fontsource/fira-mono";
 import "./Shell.css";
 import "../components/_global.css";
 import Head from "./groups/Head.astro";
