--- a/src/layouts/groups/Header.astro
+++ b/src/layouts/groups/Header.astro
@@ -2,4 +2,10 @@
 
 ---
 
-<header></header>
+<style>
+  header {
+    background-color: var(--color-primary);
+  }
+</style>
+
+<header>Test</header>
