--- a/src/layouts/Shell.astro
+++ b/src/layouts/Shell.astro
@@ -1,5 +1,6 @@
 ---
-import "@fontsource/pt-sans";
+import "@fontsource/pt-sans/400.css";
+import "@fontsource/pt-sans/700.css";
 import "@fontsource/fira-mono";
 import "./Shell.css";
 import "../components/_global.css";
