--- a/src/layouts/groups/Ribbon.astro
+++ b/src/layouts/groups/Ribbon.astro
@@ -37,6 +37,7 @@ const locale = currentLocale.get();
     display: flex;
     margin: 0;
     padding: 0;
+    white-space: nowrap;
   }
 
   div ul li:not(:last-of-type)::after {
