chore: upgrade dependencies

--- a/src/layouts/groups/Ribbon.astro
+++ b/src/layouts/groups/Ribbon.astro
@@ -22,6 +22,7 @@ const locale = currentLocale.get();
     justify-content: space-between;
     align-items: center;
     background-color: var(--color-primary-90);
+    height: 2rem;
   }
 
   div :global(a) {
