feat: add burger

--- a/src/components/Divider.astro
+++ b/src/components/Divider.astro
@@ -21,7 +21,7 @@ const {
 <style define:vars={{ firstSegmentColor, secondSegmentColor, height }}>
   div {
     width: 100%;
-    max-height: var(--height, var(--space-height-divider));
+    max-height: var(--height, var(--size-height-divider));
   }
 
   div :global(svg) {
@@ -30,7 +30,7 @@ const {
 
     width: 100%;
     min-height: 1.5rem;
-    max-height: var(--height, var(--space-height-divider));
+    max-height: var(--height, var(--size-height-divider));
   }
 </style>
 
