--- a/src/layouts/groups/Header.astro
+++ b/src/layouts/groups/Header.astro
@@ -4,7 +4,14 @@ import Sprite from "../../components/Sprite.astro";
 import { prepareNavigation, resolvePath } from "../../utils/paths";
 import { C } from "../../site.config";
 import Navigation from "../../components/Navigation.astro";
+import Burger from "../../components/Burger.astro";
+import Contact from "./Contact.astro";
 
+type Props = {
+  translations?: Record<string, string>;
+};
+
+const { translations } = Astro.props;
 const locale = currentLocale.get();
 const navigation = await prepareNavigation(`main/${locale}`);
 ---
@@ -25,10 +32,15 @@ const navigation = await prepareNavigation(`main/${locale}`);
     height: auto;
   }
 
+  header :global(.burger) {
+    display: none;
+    z-index: 200;
+  }
+
   header nav > :global(ul) {
     display: flex;
     font-size: 1.4rem;
-    gap: var(--space-gutter-big);
+    gap: var(--size-gutter-big);
 
     > li {
       position: relative;
@@ -80,11 +92,11 @@ const navigation = await prepareNavigation(`main/${locale}`);
     }
   }
 
-  .bottom-section {
+  .contact {
     display: none;
   }
 
-  &.open {
+  :global(.burger-active) header nav {
     position: fixed;
     inset: 0;
     z-index: 20;
@@ -93,6 +105,10 @@ const navigation = await prepareNavigation(`main/${locale}`);
     flex-direction: column;
     justify-content: space-between;
     background-color: var(--color-background);
+
+    a:hover {
+      color: var(--color-secondary) !important;
+    }
 
     ul {
       display: block;
@@ -103,15 +119,15 @@ const navigation = await prepareNavigation(`main/${locale}`);
 
       > li {
         width: 100%;
-        background-color: white;
+        background-color: var(--color-white);
         padding: 0;
 
         a {
-          width: 100%;
           padding: 1rem;
           display: flex;
           justify-content: space-between;
           align-items: center;
+          color: var(--color-black) !important;
 
           svg {
             transform: rotate(270deg);
@@ -133,14 +149,13 @@ const navigation = await prepareNavigation(`main/${locale}`);
 
             a {
               padding: 0.8rem;
-              background-color: var(--color-background);
             }
           }
         }
       }
     }
 
-    .bottom-section {
+    .contact {
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
@@ -149,11 +164,32 @@ const navigation = await prepareNavigation(`main/${locale}`);
       svg {
         height: auto;
         width: 4rem;
+        fill: var(--color-secondary);
       }
+    }
+  }
 
-      li {
-        margin: 0;
-      }
+  .contact :global(ul) {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      padding: 0;
+    }
+
+    a {
+      color: var(--color-black) !important;
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    header :global(.burger) {
+      display: block;
+    }
+
+    header nav {
+      display: none;
     }
   }
 </style>
@@ -162,9 +198,14 @@ const navigation = await prepareNavigation(`main/${locale}`);
   <a href={resolvePath(`${locale === C.DEFAULT_LOCALE ? "" : locale}`)}>
     <Sprite name="brand" />
   </a>
+  <Burger />
   <nav>
     <Navigation items={navigation}>
       <Sprite slot="nesting-indicator" name="arrow" />
     </Navigation>
+    <div class="contact">
+      <Sprite name="arrow" rotation="300deg" />
+      <Contact translations={translations} />
+    </div>
   </nav>
 </header>
