--- a/src/layouts/groups/Contact.astro
+++ b/src/layouts/groups/Contact.astro
@@ -5,9 +5,10 @@ import { C } from "../../site.config";
 
 type Props = {
   translations?: Record<string, string>;
+  withoutLanguageSwitcher?: boolean;
 };
 
-const { translations } = Astro.props;
+const { translations, withoutLanguageSwitcher } = Astro.props;
 const locale = currentLocale.get();
 ---
 
@@ -18,7 +19,11 @@ const locale = currentLocale.get();
   <li>
     <a href={`mailto:${C.SETTINGS.META.EMAIL}`}>{C.SETTINGS.META.EMAIL}</a>
   </li>
-  <li>
-    <LanguageSwitcher locale={locale} translations={translations} />
-  </li>
+  {
+    withoutLanguageSwitcher ? null : (
+      <li>
+        <LanguageSwitcher locale={locale} translations={translations} />
+      </li>
+    )
+  }
 </ul>
