feat: add pages

--- a/src/components/Divider.astro
+++ b/src/components/Divider.astro
@@ -34,7 +34,7 @@ const {
   }
 </style>
 
-<div style={flipVertical ? "margin-block-end: -1px;" : ""}>
+<div style={flipVertical ? "margin-block-end: -1px;" : ""} class="divider">
   {
     kind === "single" ? (
       <svg
