--- a/src/pages/[...locale]/[...pages].astro
+++ b/src/pages/[...locale]/[...pages].astro
@@ -25,7 +25,7 @@ const { Content } = await render(Astro.props);
 
 <Shell translations={translations}>
   <Meta slot="meta" title={title} />
-  <article>
+  <article class="page-padding">
     <header>
       <h1>{title}</h1>
     </header>
