--- a/src/layouts/groups/Header.astro
+++ b/src/layouts/groups/Header.astro
@@ -60,7 +60,7 @@ const navigation = await prepareNavigation(`main/${locale}`);
         right: 50%;
         transform: translateX(50%);
         z-index: 20;
-        background-color: var(--color-background);
+        background-color: var(--color-white);
         box-shadow: 2px 2px 0 var(--color-primary);
         white-space: nowrap;
 
@@ -74,7 +74,7 @@ const navigation = await prepareNavigation(`main/${locale}`);
           width: 0;
           height: 0;
           border-inline: 0.7rem solid transparent;
-          border-block-end: 0.7rem solid var(--color-background);
+          border-block-end: 0.7rem solid var(--color-white);
         }
 
         a {
