--- a/src/layouts/groups/Ribbon.astro
+++ b/src/layouts/groups/Ribbon.astro
@@ -74,7 +74,7 @@ const locale = currentLocale.get();
   div > a {
     display: flex;
     align-items: center;
-    font-family: var(--fonts-heading);
+    font-family: var(--font-heading);
     font-size: 0.8rem;
   }
 
