feat: add slider

--- a/src/components/Sprite.astro
+++ b/src/components/Sprite.astro
@@ -1,7 +1,7 @@
 ---
 import SpriteData from "../../res/sprite/sprite.json";
 
-export type Props = {
+type Props = {
   name: keyof typeof SpriteData;
   class?: string;
   viewBox?: string;
