--- a/src/layouts/groups/SpotlightSection.astro
+++ b/src/layouts/groups/SpotlightSection.astro
@@ -8,7 +8,7 @@
 
 <style>
   section {
-    margin-top: calc(var(--size-height-divider) * -1);
+    margin: calc(var(--size-height-divider) * -1) 0;
   }
 
   .carousel {
@@ -17,6 +17,7 @@
   }
   .carousel-container {
     display: flex;
+    height: 100%;
   }
   .carousel-container > :global(*) {
     flex: 0 0 100%;
